# fitr

./: .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs
